# SeriesTemporais

./: Makefile  README.md  makefile  pyproject.toml
src/app/: GRU.py  LSTM.py  Rnn.py
src/notebooks/: SériesTemporais.ipynb
